--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -76,11 +76,11 @@
         <div class="container">
   
           <div class="row mt-4">
-            <div class="col-lg-6 video-box mt-3 mb-3 ">
+            <div class="col-lg-6 col-md-12 video-box mt-3 mb-3 ">
               <iframe width="100%" height="100%" src="https://www.youtube.com/embed/fuG601kDCNc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
   
-            <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
+            <div class="col-lg-6 d-flex flex-column justify-content-center p-5 ">
   
               <div class="icon-box nav-link">
                 <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" style="color: rgb(38, 82, 185);" width="38" height="38" fill="currentColor" class="bi bi-file-slides" viewBox="0 0 16 16">
