--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -122,7 +122,7 @@
       <section class="service-details">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 d-flex align-items-stretch" >
+          <div class="col-lg-4 col-md-12 col-12 d-flex align-items-stretch" >
             <div class="card">
               <div class="card-img">
                 <img src="../assets/img/1.jpg" alt="...">
@@ -141,7 +141,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 d-flex align-items-stretch" >
+          <div class="col-lg-4 col-md-12  col-12 d-flex align-items-stretch" >
             <div class="card">
               <div class="card-img">
                 <img src="../assets/img/2.jpg" alt="...">
@@ -164,7 +164,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 d-flex align-items-stretch" >
+          <div class="col-lg-4 col-md-12  col-12 d-flex align-items-stretch" >
             <div class="card">
               <div class="card-img">
                 <img src="../assets/img/3.png" alt="...">
@@ -205,7 +205,7 @@
         <div class="container"  >
 
           <div class="row mb-4">
-            <div class="col-lg-2 col-4 ">
+            <div class="col-lg-2 col-4">
               <img src="../assets/logos/LogoGobernacionRedimensionado.png" alt="" width="120" class="">
             </div>
             <div class="col-lg-2 col-4 ">
