--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -20,13 +20,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <!-- Vendor CSS Files -->
-    <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <!-- <link href="../assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+    <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
     
     <title>Servicios</title>
 </head>
@@ -92,7 +92,7 @@
             <div class="container">
 
               <div class="row">
-                <div class="col-md-6 col-lg-4 d-flex align-items-stretch" data-aos="fade-up">
+                <div class="col-md-6 col-lg-4 d-flex col-xs-12 align-items-stretch" data-aos="fade-up">
                   <div class="icon-box icon-box-pink">
                     <div class="icon"><i class="fa-solid fa-location-dot"></i></div>
                     <h4 class="title"><a href="">GEO</a></h4>
@@ -107,7 +107,7 @@
                   </div>
                 </div>
 
-                <div class="col-md-6 col-lg-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+                <div class="col-md-6 col-lg-4 col-xs-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
                   <div class="icon-box icon-box-cyan">
                     <div class="icon"><i class="fa-solid fa-tractor"></i></i></div>
                     <h4 class="title"><a href="">AGRO</a></h4>
@@ -121,7 +121,7 @@
                   </div>
                 </div>
 
-                <div class="col-md-6 col-lg-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-md-6 col-lg-4 col-xs-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
                   <div class="icon-box icon-box-green">
                     <div class="icon"><i class="fa-brands fa-envira"></i></div>
                     <h4 class="title"><a href="">AMBIENTE</a></h4>
@@ -267,7 +267,7 @@
                     </div>
                 </div>
                 <hr>
-                <div class="row mb-5 mt-4 text-center">
+                <div class="row mt-3 text-center">
                     <div class="col-lg-6">
                     
                     <h3>HBS <small>(HIDROBIOSISTEMAS)</small></h3>
@@ -282,7 +282,7 @@
                         e internacional.
                     </p>
                     </div>
-                    <div class="col-lg-6 pt-4 pt-lg-0">
+                    <div class="col-lg-6  pt-lg-0">
                         <img src="../assets/img/cenigaa_blanconegro.jfif" class="img-fluid" alt="">
                     </div>
                 </div>
@@ -336,17 +336,17 @@
                             </div>
                         </div>    
                     </div>
-                    <div class="col-lg-4 pt-4 pt-lg-0">
+                    <div class="col-lg-4 pt-lg-0">
                         <img src="../assets/img/g-pro.jpeg" class="img-fluid" alt="" style="height: 100%;">
                     </div>
                 </div>
                 <hr>
-                <div class="row mb-5 mt-4">
+                <div class="row mb-5 ">
                     <div class="col-lg-6">
                     <img src="../assets/img/agrobusines.jpeg" class="img-fluid" alt="">
                     </div>
-                    <div class="col-lg-6 pt-4 pt-lg-0">
-                    <h3>AGRO-BUSINES 4.0 <small>Reverdeciendo el mundo</small></h3>
+                    <div class="col-lg-6 ">
+                    <!-- <h3>AGRO-BUSINES 4.0 <small>Reverdeciendo el mundo</small></h3> -->
                     <img src="../assets/svg/AgroBussines.svg" alt="" style="width: 90%; height: 40%;">
                     <p class="fst-italic">
                         Agribusiness 4.0 (AGB4) está basado en
@@ -522,13 +522,13 @@
 
 
     <!-- Vendor JS Files -->
-    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-
+    <!-- <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="../assets/vendor/aos/aos.js"></script>
+    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
+    <script src="../assets/vendor/php-email-form/validate.js"></script>
+ -->
 </html>
