--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -454,7 +454,7 @@
     <script src="../assets/js/popper.min.js"></script>
     <script src="../assets/js/bootstrap.min.js"></script>
     <script src="../assets/js/jquery.sticky.js"></script>
-    <script src="../assets/js/main.js"></script>
+    <!-- <script src="../assets/js/main.js"></script> -->
     <script src="../assets/js/proyecto.js"></script>
 </body>
 </html>
